Bug 1570556 - Remove call to pango_fc_font_map_shutdown, which was moved out of public headers in Pango 1.44. r=dbaron

Differential Revision: https://phabricator.services.mozilla.com/D42127